# router-bot

./: Cargo.toml  Readme.md
src/: action.rs  adapter.rs  api.rs  error.rs  event.rs  lib.rs  main.rs  processor.rs  utils.rs  ws.rs
src/adapters/: auth.rs  http.rs  mod.rs
src/models/: basic_type.rs  event.rs  message.rs  mod.rs
tests/: common.rs  ws_integration_tests.rs
