[package]
name = "router-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.12.4", features = ["neon-uring"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
portpicker = "0.1"
